--- a/mod/templates/demo.html
+++ b/mod/templates/demo.html
@@ -11,7 +11,7 @@
 <body>
 
 	<!--Your Code Here-->
-	<!--#include virtual="./path/to/include/file.html" -->
+	<!--#include virtual="./index.html" -->
 
 	<script>
 		KISSY.use('<%= packageName %>/<%= mojoName %>/index', function(S, <%= modName %>) {
