--- a/mod/templates/index.html
+++ b/mod/templates/index.html
@@ -1,17 +1,7 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-	<meta charset="utf-8" />
-	<title> <%= projectName %> - <%= modName %> demo </title>
-	<link rel="stylesheet" href="index.css"/>
-	<script src="http://g.tbcdn.cn/kissy/k/1.3.1/seed-min.js"></script>
-	<!-- CDN: <%= config %> -->
-	<script src="<%= srcPath %>config.js"></script>
-</head>
-<body>
+	<script src="<%= srcPath %><%= modName %>/index.js"></script>
+	<link href="<%= srcPath %><%= modName %>/index.css" rel="stylesheet" />
 
-	<!--Your Code Here-->
-	<!--#include virtual="./path/to/include/file.html" -->
+	<!--#include virtual="other-pages.html" -->
 
 	<script>
 		KISSY.use('<%= packageName %>/<%= mojoName %>/index', function(S, <%= modName %>) {
