--- a/mod/templates/index.html
+++ b/mod/templates/index.html
@@ -1,5 +1,5 @@
 
-
+<!--如不参与combohtml，可忽略此句-->
 <script src="<%= srcPath %><%= mojoName %>/index.js"></script>
 <link href="<%= srcPath %><%= mojoName %>/index.css" rel="stylesheet" />
 
