commit by jayli

--- a/mod/templates/index_nocombo.html
+++ b/mod/templates/index_nocombo.html
@@ -1,6 +1,8 @@
 
 <link href="<%= srcPath %><%= mojoName %>/index.css" rel="stylesheet" />
 
+模块正文从这里开始
+
 <!--#include virtual="other-pages.html" -->
 
 <script>
