--- a/mod/templates/index.html
+++ b/mod/templates/index.html
@@ -3,6 +3,8 @@
 <script src="<%= srcPath %><%= mojoName %>/index.js"></script>
 <link href="<%= srcPath %><%= mojoName %>/index.css" rel="stylesheet" />
 
+模块正文从这里开始
+
 <!--#include virtual="other-pages.html" -->
 
 <script>
