--- a/pi/templates/index.html
+++ b/pi/templates/index.html
@@ -4,24 +4,24 @@
     <meta charset="utf-8"/>
     <title><%= comConfig.name %>的demo</title>
     <script src="http://g.tbcdn.cn/kissy/k/1.4.0/seed-min.js" charset="utf-8"></script>
+    <!--<script src="http://g.tbcdn.cn/mpi/libs/0.1.1/seed-min.js" charset="utf-8"></script>-->
 </head>
 <body>
-<h2><%= comConfig.name %>的demo</h2>
+<h2><%= comConfig.name %></h2>
 
 <script>
     var S = KISSY;
 	S.config({
 		packages:[
 			{
-				name:"pkg",
-				path:'../',
+				name:"pi",
+				path:'../../',
 				charset:"utf-8",
 				ignorePackageNameInUri:true
 			}
 		]
 	});
-
-    S.use('pkg/index', function (S, <%= comConfig.componentClass %>) {
+    S.use('pi/<%=comConfig.name%>/index', function (S, <%= comConfig.componentClass %>) {
          var <%= comConfig.name %> = new <%= comConfig.componentClass %>();
     })
 </script>
