--- a/pi/templates/index.html
+++ b/pi/templates/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <title><%= comConfig.name %>的demo</title>
-    <script src="http://g.tbcdn.cn/kissy/k/1.4.0/seed-min.js" charset="utf-8"></script>
+    <script src="http://g.tbcdn.cn/kissy/k/1.4.1/seed-min.js" charset="utf-8"></script>
+	<!--H5项目将Kissy种子文件替换为mpi里的种子文件-->
     <!--<script src="http://g.tbcdn.cn/mpi/libs/0.1.1/seed-min.js" charset="utf-8"></script>-->
     <style>
         body{
