--- a/page/templates/index.htm
+++ b/page/templates/index.htm
@@ -3,9 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 	<title> <%= projectName %> - <%= modName %> demo </title>
-	<script src="http://g.tbcdn.cn/kissy/k/1.4.1/seed-min.js"></script>
-	<link rel="stylesheet" href="index.css"/>
-	<!-- CDN: <%= config %> -->
+	<script src="http://g.tbcdn.cn/??kissy/k/1.4.1/seed-min.js,tpi/pi/1.1.6/seed-min.js"></script>
+	<link rel="stylesheet" href="./index.css"/>
 	<script src="<%= srcPath %>config.js"></script>
 </head>
 <body>
