bugfix for less & sass

--- a/mod/templates/index_nocombo.html
+++ b/mod/templates/index_nocombo.html
@@ -1,5 +1,5 @@
 
-<link href="<%= srcPath %><%= mojoName %>/index.css" rel="stylesheet" />
+<link href="<%= srcPath %><%= mojoName %>/index.<%= cssCompile %>.css" rel="stylesheet" />
 
 模块正文从这里开始
 
