--- a/page/templates/index.htm
+++ b/page/templates/index.htm
@@ -22,7 +22,7 @@
 	<script src="http://g.tbcdn.cn/??kissy/k/1.4.1/seed-min.js,tpi/pi/1.1.6/seed-min.js"></script>
 	<link rel="stylesheet" href="http://g.tbcdn.cn/kissy/k/1.4.1/css/dpl/base-min.css">
 	<!--import Page's Assets-->
-	<link rel="stylesheet" href="./index.less.css"/>
+	<link rel="stylesheet" href="./index.<%= cssCompile %>.css"/>
 	<script src="<%= srcPath %>config.js"></script>
 </head>
 <body>
