--- a/page/templates/index.less
+++ b/page/templates/index.less
@@ -1,6 +1,5 @@
-/* Your Css Code here*/
+/* Less / SCSS Syntax Example*/
 
-/* Less Syntax Example*/
 @font-face {
     font-family: "global-iconfont";
     src: url("http://g.tbcdn.cn/tb/icon-font/1.1.8/iconfont.eot?#iefix") format("embedded-opentype"), url("http://g.tbcdn.cn/tb/icon-font/1.1.8/iconfont.woff") format("woff"), url("http://g.tbcdn.cn/tb/icon-font/1.1.8/iconfont.ttf") format("truetype"), url("http://g.tbcdn.cn/tb/icon-font/1.1.8/iconfont.svg#uxiconfont") format("svg");
