--- a/h5/templates/index.htm
+++ b/h5/templates/index.htm
@@ -1,43 +1,53 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="zh">
 <head>
-	<?php
-		if(isset($argv)){
-		    $_GET = (array)(json_decode($argv[2]));
-		}
-	?>
+	<?php if(isset($argv)){$_GET = (array)(json_decode($argv[2]));}	?>
+    <meta charset="UTF-8">
 	<title> <%= projectName %> - <%= modName %> Demo </title>
-	<meta charset="utf-8">
-	<!--Meta-->
-	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
-	<meta content="yes" name="apple-mobile-web-app-capable" />
-	<meta content="black" name="apple-mobile-web-app-status-bar-style" />
-	<meta content="telephone=no" name="format-detection" />
-	<meta content="false" name="twcClient" id="twcClient" />
-	<meta content="yes" name="apple-touch-fullscreen" />
-	<!--Global Imgs-->
-	<link type="image/x-icon" href="http://www.taobao.com/favicon.ico" rel="shortcut icon" />
-	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="http://img02.taobaocdn.com/tps/i2/T1CeYDXkdcXXX1dP6j-57-57.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://img03.taobaocdn.com/tps/i3/T1Tf6CXbdnXXcCcBHm-72-72.png" />
-	<link rel="apple-touch-startup-image" href="http://img04.taobaocdn.com/tps/i4/T1Ig6UXaJgXXbFQ7Io-320-460.png" />
-	<!--Global StyleSheets-->
-	<link rel="stylesheet" href="http://g.tbcdn.cn/tpi/pi/1.1.0/base/index-min.css" />
-	<link rel="stylesheet" href="./index.<%= cssCompile %>.css"/>
-	<!--Global JavaScripts-->
-	<script src="http://g.tbcdn.cn/kissy/m/0.2.1/mini-full-min.js"></script>
-	<script src="../../config.js"></script>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <meta content="black" name="apple-mobile-web-app-status-bar-style" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta content="false" name="twcClient" id="twcClient" />
+    <!--Global Imgs-->
+    <link type="image/x-icon" href="http://www.taobao.com/favicon.ico" rel="shortcut icon" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="http://img02.taobaocdn.com/tps/i2/T1CeYDXkdcXXX1dP6j-57-57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://img03.taobaocdn.com/tps/i3/T1Tf6CXbdnXXcCcBHm-72-72.png" />
+    <link rel="apple-touch-startup-image" href="http://img04.taobaocdn.com/tps/i4/T1Ig6UXaJgXXbFQ7Io-320-460.png" />
+    <!--Global StyleSheets-->
+    <link rel="stylesheet" href="http://g.tbcdn.cn/mpi/base/reset-min.css" />
+    <link rel="stylesheet" href="http://g.tbcdn.cn/mpi/base/global-min.css" />
+    <link rel="stylesheet" href="./index.<%= cssCompile %>.css"/>
+    <!--Global JavaScripts-->
+    <script type="text/javascript" src="http://g.tbcdn.cn/kissy/m/0.2.1/mini-full-min.js"></script>
+    <script type="text/javascript" src="http://g.tbcdn.cn/mpi/bridge/index-min.js"></script>
+    <script type="text/javascript" src="../../config.js"></script>
+    <!--Global Header-->
+	<!--扩展用共用头-->
+    <!--#include virtual="../header.html" -->
 </head>
 <body>
-	<!-- 内容模块 begin -->
 
-	<!--#include virtual="./mock.tms.html" -->
+<div data-role="page"><!--动画转场包装器开始-->
 
-	<!-- 内容模块 end -->
-	<script>
-		KISSY.use('<%= packageName %>/<%= mojoName %>/index', function(S, <%= modName %>) {
-			new <%= modName %>();
-		});	
-	</script>
+<div id="tbh5v0" class="content triph5v0">
+    <div id="bodyCont" class="screen-wrap fullscreen">
+	<!--正文开始-->
+
+		<!--JUICER 翻译成 TMS 语法例子-->
+		<!--#include virtual="./mock.tms.html" -->
+
+	<!--正文结束-->
+    </div>
+</div>
+
+<script type="text/javascript">
+    KISSY.use('<%= packageName %>/<%= mojoName %>/index', function(S, <%= modName %>) {
+        new <%= modName %>();
+    });
+</script>
+
+</div><!--动画转场包装器结束-->
 
 </body>
 </html>
