--- a/page/templates/mock.tms.htm
+++ b/page/templates/mock.tms.htm
@@ -1,4 +1,8 @@
-<!--Juicer Template convert to tms-->
+<!--
+	文档参照:
+	http://juicer.name/
+	http://cnpmjs.org/package/grunt-tms
+-->
 
 <!--#def
 	{
@@ -7,7 +11,9 @@
 		"href": "http://gtms01.alicdn.com/tps/i1/T1QBDWFXxcXXXzCwr6-168-170.png"
 	}
 -->
-<img title="${title}" src="${href}"/>
+
+图片地址: ${title} <br />
+链接地址: ${href}
 
 <!--#def
 	{
