--- a/pi/templates/index.html
+++ b/pi/templates/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8"/>
     <title><%= comConfig.name %>的demo</title>
     <script src="http://g.tbcdn.cn/kissy/k/1.4.1/seed-min.js" charset="utf-8"></script>
-	<!--H5项目将Kissy种子文件替换为mpi里的种子文件-->
-    <!--<script src="http://g.tbcdn.cn/mpi/libs/0.1.1/seed-min.js" charset="utf-8"></script>-->
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+	<!--H5项目将替换为KISSY MINI-->
+	<!--
+	<script src="http://g.tbcdn.cn/kissy/m/0.2.1/mini-full.js" charset="utf-8"></script>
+	-->
     <style>
         body{
             padding:20px 30px;
