modified by jayli for bugfix

--- a/page/templates/index.htm
+++ b/page/templates/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<?php if(isset($argv)){ $_GET = (array)(json_decode($argv[2]));	} ?>
+	<!--<?php if(isset($argv)){ $_GET = (array)(json_decode($argv[2]));	} ?>-->
 	<title> <%= projectName %> - <%= modName %> Demo </title>
 	<meta charset="utf-8" />
     <!--import Kissy Seed 1.4.1 & Pi Seed 1.1.7-->
