--- a/h5/templates/index.htm
+++ b/h5/templates/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="zh">
 <head>
-	<?php if(isset($argv)){$_GET = (array)(json_decode($argv[2]));}	?>
+	<!--<?php if(isset($argv)){$_GET = (array)(json_decode($argv[2]));}	?>-->
     <meta charset="UTF-8">
 	<title> <%= projectName %> - <%= modName %> Demo </title>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
