scss和less显示写法去掉

--- a/h5/templates/index.htm
+++ b/h5/templates/index.htm
@@ -18,7 +18,7 @@
     <!--Global StyleSheets-->
     <link rel="stylesheet" href="http://g.tbcdn.cn/mpi/base/reset-min.css" />
     <link rel="stylesheet" href="http://g.tbcdn.cn/mpi/base/global-min.css" />
-    <link rel="stylesheet" href="./index.<%= cssCompile %>.css"/>
+    <link rel="stylesheet" href="./index.css"/>
     <!--Global JavaScripts-->
     <script type="text/javascript" src="http://g.tbcdn.cn/kissy/m/0.2.1/mini-full-min.js"></script>
     <script type="text/javascript" src="http://g.tbcdn.cn/mpi/bridge/index-min.js"></script>
