新增index_fullfill.htm

--- a/h5/templates/index_fullfill.htm
+++ b/h5/templates/index_fullfill.htm
@@ -16,12 +16,14 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://img03.taobaocdn.com/tps/i3/T1Tf6CXbdnXXcCcBHm-72-72.png" />
     <link rel="apple-touch-startup-image" href="http://img04.taobaocdn.com/tps/i4/T1Ig6UXaJgXXbFQ7Io-320-460.png" />
     <!--Global StyleSheets-->
-    <link rel="stylesheet" href="../../css/index.css" />
+    <link rel="stylesheet" href="../../widgets/css/index.css" />
     <!--Page StyleSheets-->
     <link rel="stylesheet" href="./index.css"/>
     <!--Global JavaScripts-->
-    <script type="text/javascript" src="http://g.tbcdn.cn/kissy/m/0.2.1/mini-full-min.js"></script>
-    <script type="text/javascript" src="http://g.tbcdn.cn/mpi/bridge/index-min.js"></script>
+    <script type="text/javascript" src="http://g.tbcdn.cn/kissy/m/0.2.7/??mini-full-min.js,base-min.js,juicer-min.js,ua-min.js,anim-min.js"></script>
+    <script type="text/javascript" src="../../widgets/libs/mtop/index.js"></script>
+    <script type="text/javascript" src="../../widgets/libs/tracker/index.js"></script>
+    <script type="text/javascript" src="../../widgets/libs/bridge/index.js"></script>
     <script type="text/javascript" src="../../config.js"></script>
 </head>
 <body>
