--- a/h5/templates/index_fullfill.htm
+++ b/h5/templates/index_fullfill.htm
@@ -21,10 +21,11 @@
     <link rel="stylesheet" href="./index.css"/>
     <!--Global JavaScripts-->
     <script type="text/javascript" src="http://g.tbcdn.cn/kissy/m/0.2.7/??mini-full-min.js,base-min.js,juicer-min.js,ua-min.js,anim-min.js"></script>
-    <script type="text/javascript" src="../../widgets/libs/mtop/index.js"></script>
-    <script type="text/javascript" src="../../widgets/libs/tracker/index.js"></script>
-    <script type="text/javascript" src="../../widgets/libs/bridge/index.js"></script>
+    <script type="text/javascript" src="../../widgets/mtop/index.js"></script>
+    <script type="text/javascript" src="../../widgets/tracker/index.js"></script>
+    <script type="text/javascript" src="../../widgets/bridge/index.js"></script>
     <script type="text/javascript" src="../../config.js"></script>
+    <script type="text/javascript" src="../../map.js"></script>
 </head>
 <body>
 
