--- a/h5/templates/index_fullfill.htm
+++ b/h5/templates/index_fullfill.htm
@@ -20,10 +20,12 @@
     <!--Page StyleSheets-->
     <link rel="stylesheet" href="./index.css"/>
     <!--Global JavaScripts-->
-    <script type="text/javascript" src="http://g.tbcdn.cn/kissy/m/0.2.7/??mini-full-min.js,base-min.js,juicer-min.js,ua-min.js,anim-min.js"></script>
-    <script type="text/javascript" src="../../widgets/mtop/index.js"></script>
+    <script type="text/javascript" src="../../widgets/kissy/build/mini-full-min.js"></script>
+    <script type="text/javascript" src="../../widgets/kissy/build/base-min.js"></script>
+    <script type="text/javascript" src="../../widgets/kissy/build/juicer-min.js"></script>
+    <script type="text/javascript" src="../../widgets/kissy/build/ua-min.js"></script>
     <script type="text/javascript" src="../../widgets/tracker/index.js"></script>
-    <script type="text/javascript" src="../../widgets/bridge/index.js"></script>
+    <script type="text/javascript" src="../../widgets/jsbridge/index.js"></script>
     <script type="text/javascript" src="../../config.js"></script>
     <script type="text/javascript" src="../../map.js"></script>
 </head>
