css的引用直接使用线上地址

--- a/h5/templates/index_fullfill.htm
+++ b/h5/templates/index_fullfill.htm
@@ -16,14 +16,14 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://img03.taobaocdn.com/tps/i3/T1Tf6CXbdnXXcCcBHm-72-72.png" />
     <link rel="apple-touch-startup-image" href="http://img04.taobaocdn.com/tps/i4/T1Ig6UXaJgXXbFQ7Io-320-460.png" />
     <!--Global StyleSheets-->
-    <link rel="stylesheet" href="../../widgets/css/index.css" />
+    <link rel="stylesheet" href="http://g.tbcdn.cn/mpi/css/0.0.1/mpi-min.css" />
     <!--Page StyleSheets-->
     <link rel="stylesheet" href="./index.css"/>
     <!--Global JavaScripts-->
-    <script type="text/javascript" src="../../widgets/kissy/build/mini-full-min.js"></script>
-    <script type="text/javascript" src="../../widgets/kissy/build/base-min.js"></script>
-    <script type="text/javascript" src="../../widgets/kissy/build/juicer-min.js"></script>
-    <script type="text/javascript" src="../../widgets/kissy/build/ua-min.js"></script>
+    <script type="text/javascript" src="../../widgets/kissy/build/mini-full.js"></script>
+    <script type="text/javascript" src="../../widgets/kissy/build/base.js"></script>
+    <script type="text/javascript" src="../../widgets/kissy/build/juicer.js"></script>
+    <script type="text/javascript" src="../../widgets/kissy/build/ua.js"></script>
     <script type="text/javascript" src="../../widgets/tracker/index.js"></script>
     <script type="text/javascript" src="../../widgets/jsbridge/index.js"></script>
     <script type="text/javascript" src="../../config.js"></script>
