--- a/h5/templates/index.htm
+++ b/h5/templates/index.htm
@@ -28,6 +28,9 @@
 
 <!--正文开始-->
 
+<!--引用TMS的例子-->
+<!--HTTP:http://trip.taobao.com/go/rgn/trip/act-818-preferential.php,gbk:HTTP-->
+
 <!--JUICER 翻译成 TMS 语法例子-->
 <!--#include virtual="./mock.tms.html" -->
 
