--- a/h5/templates/index_fullfill.htm
+++ b/h5/templates/index_fullfill.htm
@@ -33,6 +33,8 @@
 
 <!--正文开始-->
 
+<!--引用TMS的例子-->
+<!--HTTP:http://trip.taobao.com/go/rgn/trip/act-818-preferential.php,gbk:HTTP-->
 <!--JUICER 翻译成 TMS 语法例子-->
 <!--#include virtual="./mock.tms.html" -->
 
