--- a/mod/templates/index.html
+++ b/mod/templates/index.html
@@ -1,7 +1,7 @@
 
 <!--如不参与combohtml，可忽略此句-->
 <script src="<%= srcPath %><%= mojoName %>/index.js"></script>
-<link href="<%= srcPath %><%= mojoName %>/index.<%= cssCompile %>.css" rel="stylesheet" />
+<link href="<%= srcPath %><%= mojoName %>/index.css" rel="stylesheet" />
 
 模块正文从这里开始
 
