--- a/mod/templates/index_combo.html
+++ b/mod/templates/index_combo.html
@@ -1,7 +1,7 @@
 
 <!--引用的本地文在构建时件会被抽取和合并-->
 <script src="<%= srcPath %><%= mojoName %>/index.js"></script>
-<link href="<%= srcPath %><%= mojoName %>/index.<%= cssCompile %>.css" rel="stylesheet" />
+<link href="<%= srcPath %><%= mojoName %>/index.css" rel="stylesheet" />
 
 模块正文从这里开始
 
