细节优化：新建页面/模块/组件tip；作者自动完成

--- a/mod/templates/index_combo.html
+++ b/mod/templates/index_combo.html
@@ -1,5 +1,4 @@
-
-<!--引用的本地文在构建时件会被抽取和合并-->
+<!--引用的本地文件在构建时会被抽取和合并-->
 <script src="<%= srcPath %><%= mojoName %>/index.js"></script>
 <link href="<%= srcPath %><%= mojoName %>/index.css" rel="stylesheet" />
 
