客户端5.0新增的combohtml、empty、kmc:offnline，watch 等配置，支持离线包

--- a/h5/templates/index_fullfill.htm
+++ b/h5/templates/index_fullfill.htm
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="data-spm" content="181.000000x"/><!--每个页面都必须申请SPM 的 B 点-->
 	<title> <%= projectName %> - <%= modName %> </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"  />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -13,10 +14,12 @@
     <!--Page StyleSheets-->
     <link rel="stylesheet" href="./index.css"/>
     <!--Global JavaScripts-->
-    <script type="text/javascript" src="../../widgets/kissy/build/mini-full.js"></script>
-    <script type="text/javascript" src="../../widgets/kissy/build/base.js"></script>
-    <script type="text/javascript" src="../../widgets/kissy/build/juicer.js"></script>
-    <script type="text/javascript" src="../../widgets/kissy/build/ua.js"></script>
+    <script type="text/javascript" src="../../widgets/m/build/mini-full.js"></script>
+    <script type="text/javascript" src="../../widgets/m/build/base.js"></script>
+    <script type="text/javascript" src="../../widgets/m/build/juicer.js"></script>
+    <script type="text/javascript" src="../../widgets/m/build/ua.js"></script>
+    <script type="text/javascript" src="../../widgets/m/build/touch.js"></script>
+    <script type="text/javascript" src="../../widgets/m/build/anim.js"></script>
     <script type="text/javascript" src="../../widgets/jsbridge/index.js"></script>
     <script type="text/javascript" src="../../config.js"></script>
     <script type="text/javascript" src="../../map.js"></script>
