修复构建文件

--- a/h5/templates/index_fullfill.htm
+++ b/h5/templates/index_fullfill.htm
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="../../widgets/m/build/ua.js"></script>
     <script type="text/javascript" src="../../widgets/m/build/touch.js"></script>
     <script type="text/javascript" src="../../widgets/m/build/anim.js"></script>
+    <script type="text/javascript" src="../../widgets/m/build/lang.js"></script>
     <script type="text/javascript" src="../../widgets/jsbridge/index.js"></script>
     <script type="text/javascript" src="../../config.js"></script>
     <script type="text/javascript" src="../../map.js"></script>
